# bayesopt-ros

./: CMakeLists.txt  README.md  package.xml
config/: test.json
example/: example_config.json  example_opt_function.py
msg/: OptimizationResult.msg
scripts/: bayesopt-ros.py  test_executor.py
srv/: EvaluateQuery.srv
